# CG_TP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  download_textures.py  imgui.ini  normals.txt  planet_parser.py  planets_generator.py  run.sh  solar_system.xml
.cache/clangd/index/: Plane.cpp.38BCE441A11FD2D2.idx  Plane.h.2EF5370542715A69.idx  Triangle.h.B96DF1890CF2634E.idx  box.cpp.AEA1D54354A42DFF.idx  box.h.FA188F9AED04322A.idx  camera.cpp.EC2024FA3F7F2B8F.idx  camera.h.49E239558B17ED03.idx  cone.cpp.18B93E69C1436F2A.idx  cone.h.93CB5734F615D615.idx  engine.cpp.F4375EA69E642844.idx  engine.h.055C4ABB387BE3C3.idx  figure.cpp.3F5E3DD0DA850322.idx  figure.h.004C34AB05432CD1.idx  group.cpp.4C574D22E12C71D1.idx  group.h.2E07D98B3C505752.idx  input.cpp.C9E0C0BBA787A3BD.idx  input.h.FCD956C4951EAD43.idx  main.cpp.0DACFB7E5B92DA2B.idx  main.cpp.6A0AEF3269C982A4.idx  model.cpp.9D55A2191660CC9A.idx  model.h.1F554118256A854B.idx  pch.h.F1BE9D46A4C960A3.idx  rotation.cpp.542F20362369C334.idx  rotation.h.A62C8399735E4CF0.idx  scale.cpp.DE6448C07FDB0498.idx  scale.h.B09B76577C74C0FD.idx  sphere.cpp.58E0433CF587E001.idx  sphere.h.0F8637FF4DCAC03A.idx  torus.cpp.882B5CE66D783547.idx  torus.h.3B6236E559D0B007.idx  transform.cpp.64BA6DC0616B6893.idx  transform.h.F3733671D99004B2.idx  translation.cpp.AF82F5DB1FB36D7E.idx  translation.h.3731C6C39DD40FC4.idx  utils.cpp.48A18211B4AB9FCA.idx  utils.h.FBF6E496BBF07CE3.idx
data/: planets.csv
engine/: CMakeLists.txt  camera.cpp  camera.h  color.cpp  color.h  directionallight.cpp  directionallight.h  engine.cpp  engine.h  group.cpp  group.h  include.h  light.cpp  light.h  main.cpp  model.cpp  model.h  parsing.cpp  parsing.h  pointlight.cpp  pointlight.h  renderer.cpp  renderer.h  utils.cpp  utils.h
engine/GLAbstract/: VBO.cpp  VBO.h  texture.cpp  texture.h
engine/lights/: directionallight.cpp  directionallight.h  light.cpp  light.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
engine/parse_errors/: xml_parse_error.h
engine/transformations/: FixedTranslation.cpp  FixedTranslation.h  TimedTranslation.cpp  TimedTranslation.h  rotation.cpp  rotation.h  scale.cpp  scale.h  transform.cpp  transform.h  translation.cpp  translation.h
generator/: CMakeLists.txt  main.cpp
generator/figures/: Plane.cpp  Plane.h  Triangle.h  bezzier.cpp  bezzier.h  box.cpp  box.h  cone.cpp  cone.h  figure.cpp  figure.h  pyramid.cpp  pyramid.h  sphere.cpp  sphere.h  torus.cpp  torus.h
generator/input/: input.cpp  input.h  utils.cpp  utils.h
include/: pch.h
my_math/: CMakeLists.txt  io.h  matrix.cpp  matrix.h  my_math.cpp  my_math.h  vertex.h
patches/: teapot.patch
scenes/: solar_system.xml  test.xml
solar_system_elements/: asteroides-anel  neptune.3d  ring  ring-uranus
test_files_phase_4/: test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
