add_executable(engine 
    main.cpp
    engine.cpp
    camera.cpp
    model.cpp
    group.cpp
    transformations/transform.cpp
    transformations/FixedTranslation.cpp
    transformations/TimedTranslation.cpp
    transformations/rotation.cpp
    transformations/scale.cpp
    renderer.cpp
    color.cpp
    parsing.cpp
    lights/pointlight.cpp
    lights/directionallight.cpp
    lights/light.cpp
    lights/spotlight.cpp
    )
